[package]
name = "pakr-assert-size"
authors = ["Pawel Kraszewski <pawel@kraszewscy.net>"]
version = "1.0.0"
edition = "2021"
description = "Runtime checks of the size of structures"
keywords = ["sizeof","struct","ffi"]
categories = ["development-tools::ffi","development-tools::testing","memory-management"]
repository = "https://github.com/p-kraszewski/pakr-assert-size"
license = "BSD-2-Clause"
rust-version = "1.57.0"

[lib]
proc-macro = true

[dependencies]
syn = {version="^1.0",features=["full"]}
quote = "^1.0"
